* Add some more colors * Add test_world * Fix some pass by value that should be pass by const refrence

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,17 @@
+set (GMOCK_ROOT_DIR
+     "/usr/src/gmock"
+     CACHE
+     PATH
+     "Path to Google mock srcs"
+)
+
+set (GMOCK_INCLUDE_DIR
+     "/usr/include/gmock/include"
+     CACHE
+     PATH
+     "Path to Google mock include"
+)
+
 set (GTEST_ROOT_DIR
      "/usr/src/gtest"
      CACHE
@@ -12,37 +26,43 @@ set (GTEST_INCLUDE_DIR
      "Path to Google Tests include"
      FORCE)
 
-find_path (GTEST_INCLUDE_DIR gtests/gtest.h)
-
-if (GTEST_INCLUDE_DIR)
-  add_subdirectory (
-    ${GTEST_ROOT_DIR}
-    gtest
-   )
-endif (GTEST_INCLUDE_DIR)
+if (GTEST_INCLUDE_DIR AND GMOCK_INCLUDE_DIR)
+  include_directories (
+    ${GMOCK_INCLUDE_DIR}
+    ${GTEST_INCLUDE_DIR}
+  )
+  add_subdirectory(
+    ${GMOCK_ROOT_DIR}
+    "${CMAKE_CURRENT_BINARY_DIR}/gmock"
+  )
+elseif (GTEST_INCLUDE_DIR AND NOT GMOCK_INCLUDE_DIR)
+  include_directories (
+    ${GTEST_INCLUDE_DIR}
+  )
+endif(GTEST_INCLUDE_DIR AND GMOCK_INCLUDE_DIR)
 
 enable_testing ()
 
-#find_library (GMOCK_LIB gmock)
-#find_library (GMOCK_MAIN_LIB gmock_main)
+set (GMOCK_LIB gmock)
+set (GMOCK_MAIN_LIB gmock_main)
 find_path (GTEST_SRC_DIR gtest.cc PATHS /usr/src/gtest/src)
 
-if (GTEST_SRC_DIR)# AND
-   # GMOCK_LIB AND
-    #GMOCK_MAIN_LIB)
+if (GTEST_SRC_DIR AND
+    GMOCK_LIB AND
+    GMOCK_MAIN_LIB)
 
   set (GTEST_GMOCK_LIB
        gtest
-       #${GMOCK_LIB}
-       #${GMOCK_MAIN_LIB}
+       ${GMOCK_LIB}
+       ${GMOCK_MAIN_LIB}
       )
 
   set (GTEST_BACKEND_SOURCE
        test_entity_creator.cpp
        test_main.cpp
-       test_main_loop.cpp
        test_point.cpp
        test_rect.cpp
+       test_world.cpp
       )
 
   include_directories (${SDL_BACKEND_INCLUDE_DIRS} ${SDL_BACKEND_SOURCE_DIR}/src ${GTEST_INCLUDE_DIR})
@@ -53,6 +73,6 @@ if (GTEST_SRC_DIR)# AND
 
   add_custom_target (check COMMAND ../gtest-test-backend)
 
-endif (GTEST_SRC_DIR)# AND
-       #GMOCK_LIB AND
-       #GMOCK_MAIN_LIB)
+endif (GTEST_SRC_DIR AND
+       GMOCK_LIB AND
+       GMOCK_MAIN_LIB)
