--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,79 +1,25 @@
-set (GMOCK_ROOT_DIR
-     "/usr/src/gmock"
-     CACHE
-     PATH
-     "Path to Google mock srcs"
-)
+find_package(GMock)
 
-set (GMOCK_INCLUDE_DIR
-     "/usr/include/gmock/include"
-     CACHE
-     PATH
-     "Path to Google mock include"
-)
-
-set (GTEST_ROOT_DIR
-     "/usr/src/gtest"
-     CACHE
-     PATH
-     "Path to Google Tests source"
-     FORCE)
-
-set (GTEST_INCLUDE_DIR
-     "/usr/include/gtest"
-     CACHE
-     PATH
-     "Path to Google Tests include"
-     FORCE)
-
-if (GTEST_INCLUDE_DIR AND GMOCK_INCLUDE_DIR)
-  include_directories (
-    ${GMOCK_INCLUDE_DIR}
-    ${GTEST_INCLUDE_DIR}
+set (GTEST_GMOCK_LIB
+    ${GTEST_BOTH_LIBRARIES}
+    ${GMOCK_LIBRARIES}
   )
-  add_subdirectory(
-    ${GMOCK_ROOT_DIR}
-    "${CMAKE_CURRENT_BINARY_DIR}/gmock"
+
+set (GTEST_BACKEND_SOURCE
+   test_color.cpp
+   test_entity_creator.cpp
+   test_main_loop.cpp
+   test_point.cpp
+   test_rect.cpp
+   test_world.cpp
+
+   test_main.cpp
   )
-elseif (GTEST_INCLUDE_DIR AND NOT GMOCK_INCLUDE_DIR)
-  include_directories (
-    ${GTEST_INCLUDE_DIR}
-  )
-endif(GTEST_INCLUDE_DIR AND GMOCK_INCLUDE_DIR)
 
-enable_testing ()
+include_directories (${SDL_BACKEND_INCLUDE_DIRS} ${SDL_BACKEND_SOURCE_DIR}/src ${GTEST_INCLUDE_DIR})
 
-set (GMOCK_LIB gmock)
-set (GMOCK_MAIN_LIB gmock_main)
-find_path (GTEST_SRC_DIR gtest.cc PATHS /usr/src/gtest/src)
+add_executable (../gtest-test-backend ${GTEST_BACKEND_SOURCE})
+target_link_libraries (../gtest-test-backend sdl-backend ${SDL_BACKEND_LIBRARIES} ${GTEST_GMOCK_LIB})
+add_test (MazeGTest ../gtest-test-backend)
 
-if (GTEST_SRC_DIR AND
-    GMOCK_LIB AND
-    GMOCK_MAIN_LIB)
-
-  set (GTEST_GMOCK_LIB
-       gtest
-       ${GMOCK_LIB}
-       ${GMOCK_MAIN_LIB}
-      )
-
-  set (GTEST_BACKEND_SOURCE
-       test_color.cpp
-       test_entity_creator.cpp
-       test_main.cpp
-       test_point.cpp
-       test_rect.cpp
-       test_world.cpp
-      )
-
-  include_directories (${SDL_BACKEND_INCLUDE_DIRS} ${SDL_BACKEND_SOURCE_DIR}/src ${GTEST_INCLUDE_DIR})
-
-  add_executable (../gtest-test-backend ${GTEST_BACKEND_SOURCE})
-  target_link_libraries (../gtest-test-backend sdl-backend ${SDL_BACKEND_LIBRARIES} ${GTEST_GMOCK_LIB})
-  add_test (MazeGTest ../gtest-test-backend)
-
-  add_custom_target (check COMMAND ../gtest-test-backend)
-
-endif (GTEST_SRC_DIR AND
-       GMOCK_LIB AND
-       GMOCK_MAIN_LIB)
+add_custom_target (check COMMAND ../gtest-test-backend)
